--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
         <script src="javscpt.js" defer></script>
     </head>
     <body>
+        <header>
+            <div class="left-links">
+            <a href="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">Cat Pic!</a>
+            </div>
+            <div class="mid-links">
+                <a href="https://www.linkedin.com/in/muipham64/" target="_blank">Linkedin</a>
+            </div>
+            <div class="right-links">
+            <a href="https://github.com/captainsleepyhead" target="_blank"> GitHub</a>
+            </div>
+        </header>
 
+        <div class="calculator">
+            <div class="display">
+                <div class="display-text">
+                
+                </div>
+            </div>
+            <div class="top-row">
+                <button class="operator" id="+">+</button>
+                <button class="operator" id="-">-</button>
+                <button class="operator" id="*">*</button>
+                <button class="operator" id="/">/</button>
+            </div>
+            <div class="numbers">
+                <div class="row-one">
+                    <button class="num-btn" id="7">7</button>
+                    <button class="num-btn" id="8">8</button>
+                    <button class="num-btn" id="9">9</button>
+                    <button id="backspace">del</button>
+                </div>
+                <div class="row-two">
+                    <button class="num-btn" id="4">4</button>
+                    <button class="num-btn" id="5">5</button>
+                    <button class="num-btn" id="6">6</button>
+                    <button class="placeholder">_</button>
+                </div>
+                <div class="row-three">
+                    <button class="num-btn" id="1">1</button>
+                    <button class="num-btn" id="2">2</button>
+                    <button class="num-btn" id="3">3</button>
+                    <button class="placeholder">_</button>
+                </div>
+                <div class="row-four">
+                    <button class="num-btn" id="0">0</button>
+                    <button class="num-btn" id=".">.</button>
+                    <button id="clr">clear</button>
+                    <button id="=">=</button>
+                </div>
+            </div>
+        </div>
+        <footer>Mui Pham &#174; Odin Project '24</footer>
     </body>
 </html>
